<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
    </item>
    
    <item
        android:id="@+id/action_cur_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_cur_location">
    </item>
    
     <item
        android:id="@+id/action_check_data"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/check_dat">
    </item>
    
     <item
        android:id="@+id/Clear_trips"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Clear_trips">
    </item>
    
      <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about">
    </item>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit">
    </item>

</menu>
